--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "my-next-app",
+	"name": "og-image-generator",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
@@ -12,9 +12,25 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.0.1",
+		"@radix-ui/react-label": "^2.1.4",
+		"@radix-ui/react-separator": "^1.1.4",
+		"@radix-ui/react-slot": "^1.2.0",
+		"@radix-ui/react-tabs": "^1.1.9",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.503.0",
+		"nanoid": "^5.1.5",
 		"next": "15.3.1",
+		"next-themes": "^0.4.6",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.56.1",
+		"sonner": "^2.0.3",
+		"tailwind-merge": "^3.2.0",
+		"zod": "^3.24.3",
+		"zsa": "^0.6.0",
+		"zsa-react": "^0.2.3"
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20250423.0",
@@ -24,6 +40,7 @@
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"tailwindcss": "^4",
+		"tw-animate-css": "^1.2.8",
 		"typescript": "^5",
 		"wrangler": "^4.13.0"
 	}
