--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
 		"@radix-ui/react-separator": "^1.1.4",
 		"@radix-ui/react-slot": "^1.2.0",
 		"@radix-ui/react-tabs": "^1.1.9",
+		"@radix-ui/react-tooltip": "^1.2.4",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"framer-motion": "^12.8.0",
 		"lucide-react": "^0.503.0",
 		"nanoid": "^5.1.5",
 		"next": "15.3.1",
