--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
 	"name": "og-image-generator",
 	"version": "0.1.0",
 	"private": true,
+	"author": {
+		"name": "PDDO",
+		"email": "pub@pd.do"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/catpddo/og-image"
+	},
 	"scripts": {
 		"dev": "next dev --turbopack",
 		"build": "next build",
